--- a/pushpa.html
+++ b/pushpa.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <center>
-    <iframe class="iframe" src="https://streamta.site/v/p44Od1OKO3iDkl" width="800" height="600" allowfullscreen="" allowtransparency="" allow="autoplay" scrolling="no" frameborder="0"></iframe>
+        <h1>Made by Ritesh Kandel.</h1>
+        <h3>Install adblocker to watch adfree otherwise close the ads to watch.</h3>
+        <h3>Ads may come frequently be patient and close the ads.</h3>
+    <iframe class="iframe" src="https://streamta.site/v/p44Od1OKO3iDkl" width="1000" height="800" allowfullscreen="" allowtransparency="" allow="autoplay" scrolling="no" frameborder="0"></iframe>
   <!-- Code injected by live-server -->
   
   </center>
