--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <a href="MLWBD.com Spider_Man_No_Way_Home_2021_720p_10bit_HDRip.LQ.mkv" download="">
+  <a href="images.jpg" download="">
     <input type="button" value="Download">
   </a>
 </body>
