--- a/index.html
+++ b/index.html
@@ -6,9 +6,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+<style>
+    .btn{
+      background-color: blue;
+      color: white;
+      font-size: 25px;
+      border-radius: 7%;
+      margin-top: 20px;
+      padding: 5px 5px 5px;
+      border-color: black;
+      padding-left: 5px;
+      padding-right: 5px;
+      cursor: pointer;
+      
+    }
+    .copy{
+      position: absolute;
+      bottom: 0;
+      align-content: center;
+
+    }
+
+</style>
 <body>
-  <a href="images.jpg" download="">
-    <input type="button" value="Download">
+  <center> 
+
+    <h2 >Click here to DOWNLOAD! Spiderman-No way home</h2>
+     <a href="https://video-downloads.googleusercontent.com/AGQNM9LzFobA7wSz3fMuzv-ZWVPQ3oQjVehI9EVPmT_tQQc5sdQKyTWAlBKWHTD3CYnE8XddPJwirzSx9XLtkiLKYASP8gy0xS3YaPgKCxXcjQ1geOzAl8SCFwEFnYO3YhouubZoSp-r8xFcurM6iysvyI_APzpAF0VK_ib6txKS7z64PYDSgMwi3ReigkBs7o74bVWWKGMhunuxhpEFfsuyEFenUvmfY92WJ64fWBu4ac0EPQZ_1OHvXq3RZtAgAguG8SFH9ZgALEYOUNGgRxaMqa15zpZOhars5gI8NAgEjUA26FutDxXOQqTyNwMOTgZFe4chF-gbGt4q1CYaYWTLxpPdBV-GiNceG7FFA_sXFoGZ_fXcrSvNAZ2rHh-o0zRWPE9zK8_oXve8RH2ZI1m044F3x2Mw9m0nN-smiUD6anedU_TPVnZ2h-01Wn3oli_BFIzNXE7B1_67kdUzEXbE_x1Ndi0UOKx7gxzUVYqiHTvFANU3LDHCtNpUjx3oB7kDIVmQN-W4PNS7yHZBOBweIsX96xKcE42ko_R7BulSj1ia6BS9Fq5BX3AosQXvahf-sq63BThqStmu59biZ4fpixxH-cMro4BYjXNdx6QtMVXNYa3h4s48T6MsbudwFxbgaHhjxClN57rJgW6lgbdhUqzL0emcWxNe1_SFzhNse9vHAi1nIP0TS16IdB_7-SMqREXi_7pt8750qws3j7k8ru9qk5r1hqS8CemojDKtBizgocu0fYYn24EhuovO3sNYr7FxKoeanjJEuT2jxRCJ2joqGnUT4o0QMRqk2mfmmOFgJZ8W56juqqcAdHPMjKFwUWQ5mk8aDtSBHRmkHzV2tYnnfnlnaXq823_FIYt1zguaVdobXIXOTVQ-O5ImziHNElzTJrQV5jLHjTaJBF6Gfk5eYMofFHRccaj3OHufbZOtiqVNTFkLZTMlFz9PZx7nTK0FGuG9" download="">
+    <input class="btn" type="button" value="Download">
   </a>
+  <br> 
+  <h2 >Click here to DOWNLOAD! Pushpa</h2>
+  <a href="https://video-downloads.googleusercontent.com/AGQNM9IpCO__mU2YY-TVznCitryyDd80QBXQcasCHDg79lJENZxz3pH4-hjHYdPjkReGzYib2OjpXv28AB49vmjLhnWs1FtOw8zm-yT-Hzii1hygXjD8MGkL07qYYLUR53y6qWMj6NNszvpgQFs4Q7bdM29t4LeDbiu2mTrQBQEiLAddjzzE8geBj80Tj23xzrinJ_zP8QLt7YSsRkB_Ph8DbtvsEh63xSCs3GVmnQrAzFsIeTUzhfTq6DPQVunACdxuCugonN4x5yH3DDdtR2Wlzu0QS2JQ2YfC9Mar7AXDEiWtmPLyJ05460jWqc6zo2R3G1tT8G1nnp4MLHv0I5Fgc7isuFz52E3hpMhQn94cioSm7zk1Db9x_1hZExTzq0YSnNtXfj1gOfrkz9wVQA7DE8frorB6F98BVXvwqXLWCHkHr6dzW75q-r1of8uGq0_JUC5iVJX3qa7SYimgITCD6tDYXD192qcFrsEhAxXiHgC_5HI8kA4VcXAh6U_ExsiB6PvuE9zDFguFdYWkpnEyTBewkanS0BchgEycYTtubA21Lrrb0JQpq26A4zofK-MBPuQkiFORmqPZxuWrY0SjCCnFLZH-xYDfe5y540zIbxN47-XCM3Wuc4YuIYK4UBIzfT4e_ThkdERA_D-Lygu22Lkf-C5DMkt6L6eYsdNLkjXoDTXxhe2wRrV3FO6U5iTOD7ij6ug3DoAz5mLiHTfjyrJ5el4K4tgFPenb1qhKFJwMlGTJnVO7iBdCLiIb42GxCPtUqm-P_qbjv2MjHLZLmfdTRd30YHmdjTjtEtm35i-niJcVZ2Wg3tpKkWuWyRVXHTSaY70pLnnXtYO6FOLXzBeW0Vh2ZfBhLjcurCrgj4nbsoXxMzPmS8zu7nYcyNIVcReM86LhSxXAMXxE0WmiEK_trHpjhpZp5qK6TXt03DSUm6ig7_kAELmxF_JZG0IZsu-3siGP" download="">
+ <input class="btn" type="button" value="Download">
+</a>
+
+    <h4 class="copy">Copyright - Ritesh Kandel</h4>
+</center>
 </body>
 </html>
