--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
       
     }
     .copy{
-      position: absolute;
+      position: relative;
       bottom: 0;
+      font-size: 20px;
       align-content: center;
 
     }
@@ -46,14 +47,14 @@
 
   <h2 >Click here to DOWNLOAD! Pushpa</h2>
   <img class="img" src="download.jpg" alt="">
-  
+  <br>
   <a href="https://download2391.mediafire.com/xgqfubwn26ag/2z0g331ftc8ny7d/Filmy4wap.xyz+Pushpaa+%282021%29+New+South+Hindi+Full+Movie+HEVC+720p.mkv" download="">
  <input class="btn" type="button" value="Download">
 </a>
 <br>
 <h2 >Click here to DOWNLOAD! Antim</h2>
 <img class="img" src="downloads.jpg" alt="">
-
+<br>
 <a href="https://cdn.boabd.com/embed?photo=TfuvIBnexukV1NAerdby8p6TC" download="">
 <input class="btn" type="button" value="Download">
 </a>
