--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
 <a href="https://cdn.boabd.com/embed?photo=TfuvIBnexukV1NAerdby8p6TC" download="">
 <input class="btn" type="button" value="Download">
 </a>
+<br>
+<h2 >Click here to DOWNLOAD! Hum do hamare do</h2>
+<img class="img" src="download1.jpg" alt="">
+<br>
+<a href="https://cdn.boabd.com/embed?photo=l0ixbuuPDRDg92OBJPAK9isNE" download="">
+<input class="btn" type="button" value="Download">
+</a>
 
     <h4 class="copy">Copyright - Ritesh Kandel</h4>
 </center>
