--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="icon" href="i.png" type="image/x-icon">
+  <title>Moviesflic</title>
 </head>
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
