--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ h1 h2{
     height: 35%;
 
 }
-@media(max-width: 850px){
+@media(max-width: 900px){
     .navbar{
         height: 110px;
     }
@@ -218,7 +218,7 @@ h1 h2{
                     <a href="index.html">Home</a>
                     <a href="features.html">Movies</a>
                     <a href="docs.html">Search</a>
-                    <a href="login.html"><box-icon name='log-in' color='#f4f4f4' ></box-icon></a>
+                    
                 </li>
             </ul>
         </nav>
@@ -257,6 +257,14 @@ h1 h2{
 <img class="img" src="download2.jpg" alt="">
 <br>
 <a href="https://cdn.boabd.com/embed?photo=r7bdGcYZmJVC6Ja43Ow5i5wb3" download="">
+<input class="btn" type="button" value="Download">
+</a></li>
+<br>
+<li class="card">
+<h2 >Shyam singha roy</h2>
+<img class="img" src="download3.jpg" alt="">
+<br>
+<a href="https://cdn.boabd.com/embed?photo=5HUwX6x57exq10VWbXnB5op5M" download="">
 <input class="btn" type="button" value="Download">
 </a></li>
 </ul>
