--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@ h1 h2{
     justify-content: center;
     align-items: center;
     height: 100%;
+    flex-wrap: wrap;
 
 }
 .showcase{
@@ -265,6 +266,14 @@ h1 h2{
 <img class="img" src="download3.jpg" alt="">
 <br>
 <a href="https://cdn.boabd.com/embed?photo=5HUwX6x57exq10VWbXnB5op5M" download="">
+<input class="btn" type="button" value="Download">
+</a></li>
+<br>
+<li class="card">
+<h2 >Shaadi Mein Zaroor Aana</h2>
+<img class="img" src="download4.jpg" alt="">
+<br>
+<a href="https://boabd.com/photos.php?i=zg57pkkEOvQDKmhu9" download="">
 <input class="btn" type="button" value="Download">
 </a></li>
 </ul>
