--- a/index.html
+++ b/index.html
@@ -276,6 +276,14 @@ h1 h2{
 <a href="https://boabd.com/photos.php?i=zg57pkkEOvQDKmhu9" download="">
 <input class="btn" type="button" value="Download">
 </a></li>
+<br>
+<li class="card">
+<h2 >Jai Bhim</h2>
+<img class="img" src="download5.jpg" alt="">
+<br>
+<a href="https://cdn.boabd.com/embed?photo=mHvkTSQgTQeQt7jOUavIDmS99" download="">
+<input class="btn" type="button" value="Download">
+</a></li>
 </ul>
 </section>
 
