--- a/index.html
+++ b/index.html
@@ -284,6 +284,13 @@ h1 h2{
 <a href="https://cdn.boabd.com/embed?photo=mHvkTSQgTQeQt7jOUavIDmS99" download="">
 <input class="btn" type="button" value="Download">
 </a></li>
+<li class="card">
+<h2 >Akhanda</h2>
+<img class="img" src="download6.jpg" alt="">
+<br>
+<a href="https://cdn.boabd.com/embed?photo=NxBnPUtx89Yusc16CLtUNMmFn" download="">
+<input class="btn" type="button" value="Download">
+</a></li>
 </ul>
 </section>
 
