--- a/index.html
+++ b/index.html
@@ -290,7 +290,14 @@ h1 h2{
 <br>
 <a href="https://cdn.boabd.com/embed?photo=NxBnPUtx89Yusc16CLtUNMmFn" download="">
 <input class="btn" type="button" value="Download">
+</a></li><li class="card">
+<h2 >Dhamaka</h2>
+<img class="img" src="download7.jpg" alt="">
+<br>
+<a href="https://cdn.boabd.com/embed?photo=VpwoITSK325xrpC9k8ma6aWkU" download="">
+<input class="btn" type="button" value="Download">
 </a></li>
+
 </ul>
 </section>
 
