--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ h1 h3{
                 <li>
                     <a href="index.html">Home</a>
                     <a href="features.html">Movies</a>
-                    <a href="docs.html">Search</a>
+                    <a href="search.html">Search</a>
                     
                 </li>
             </ul>
@@ -231,7 +231,7 @@ h1 h3{
   <center> 
     
 <section class="languages">
-<ul class="flex">
+<ul class="flex" id="myUL">
   <li class="card"><h3 >Pushpa</h3>
   <img class="img" src="download.jpg" alt="">
   <br>
@@ -297,6 +297,13 @@ h1 h3{
 <img class="img" src="download7.jpg" alt="">
 <br>
 <a href="https://cdn.boabd.com/embed?photo=VpwoITSK325xrpC9k8ma6aWkU" download="">
+<input class="btn" type="button" value="Download">
+</a></li>
+<li class="card">
+<h3 >Ala Vaikunthapurramuloo</h3>
+<img class="img" src="download8.jpg" alt="">
+<br>
+<a href="https://cdn.boabd.com/embed?photo=nyiSYVwDKonNLXBDa4pybNcoj" download="">
 <input class="btn" type="button" value="Download">
 </a></li>
 
