--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ h1 h3{
   <li class="card"><h3 >Pushpa</h3>
   <img class="img" src="download.jpg" alt="">
   <br>
-  <a href="https://download2391.mediafire.com/xgqfubwn26ag/2z0g331ftc8ny7d/Filmy4wap.xyz+Pushpaa+%282021%29+New+South+Hindi+Full+Movie+HEVC+720p.mkv" download="">
+  <a href="http://download2391.mediafire.com/d6ycv41q436g/2z0g331ftc8ny7d/Filmy4wap.xyz+Pushpaa+%282021%29+New+South+Hindi+Full+Movie+HEVC+720p.mkv" download="">
  <input class="btn" type="button" value="Download">
 </a></li>
 <br>
@@ -304,6 +304,20 @@ h1 h3{
 <img class="img" src="download8.jpg" alt="">
 <br>
 <a href="https://cdn.boabd.com/embed?photo=nyiSYVwDKonNLXBDa4pybNcoj" download="">
+<input class="btn" type="button" value="Download">
+</a></li>
+<li class="card">
+<h3 >Viswasam</h3>
+<img class="img" src="download9.jpg" alt="">
+<br>
+<a href="https://download2389.mediafire.com/mmbfr5r178ug/w11w2mfnwes9lpa/Filmy4wap.xyz+Viswasam+%282021%29+New+South+Hindi+%28+Fan+Dubbed%29+Full+Movie+Uncut+%5BNo+Ads%5D+ESub+HD+720p.mkv" download="">
+<input class="btn" type="button" value="Download">
+</a></li>
+<li class="card">
+<h3 >Khiladi</h3>
+<img class="img" src="download10.jpg" alt="">
+<br>
+<a href="https://download2390.mediafire.com/i9etswp7f5dg/ugmzxk3u415f93b/Filmy4wap.xyz+Khiladi+V2+%282022%29+South+Hindi+Dubbed+Full+Movie+PreDvD+HD+720p.mkv" download="">
 <input class="btn" type="button" value="Download">
 </a></li>
 
