--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ h1 h3{
   <li class="card"><h3 >Pushpa</h3>
   <img class="img" src="download.jpg" alt="">
   <br>
-  <a href="http://download2391.mediafire.com/d6ycv41q436g/2z0g331ftc8ny7d/Filmy4wap.xyz+Pushpaa+%282021%29+New+South+Hindi+Full+Movie+HEVC+720p.mkv" download="">
+  <a href="https://cdn.boabd.com/embed?photo=22P3xqKyCsDLCEUFAZlTBpxGq" download="">
  <input class="btn" type="button" value="Download">
 </a></li>
 <br>
@@ -317,7 +317,7 @@ h1 h3{
 <h3 >Khiladi</h3>
 <img class="img" src="download10.jpg" alt="">
 <br>
-<a href="https://download2390.mediafire.com/i9etswp7f5dg/ugmzxk3u415f93b/Filmy4wap.xyz+Khiladi+V2+%282022%29+South+Hindi+Dubbed+Full+Movie+PreDvD+HD+720p.mkv" download="">
+<a href="https://cdn.boabd.com/embed?photo=5SvOmUtOBOvd2jq8LFb2kSecV" download="">
 <input class="btn" type="button" value="Download">
 </a></li>
 
