--- a/index.html
+++ b/index.html
@@ -320,6 +320,13 @@ h1 h3{
 <a href="https://cdn.boabd.com/embed?photo=5SvOmUtOBOvd2jq8LFb2kSecV" download="">
 <input class="btn" type="button" value="Download">
 </a></li>
+<li class="card">
+<h3 >Anjaam Pathiraa</h3>
+<img class="img" src="download11.jpg" alt="">
+<br>
+<a href="https://cdn.boabd.com/embed?photo=jAMaRJMvev4MTfKWjv1nAqaR7" download="">
+<input class="btn" type="button" value="Download">
+</a></li>
 
 </ul>
 </section>
