--- a/index.html
+++ b/index.html
@@ -327,6 +327,13 @@ h1 h3{
 <a href="https://cdn.boabd.com/embed?photo=jAMaRJMvev4MTfKWjv1nAqaR7" download="">
 <input class="btn" type="button" value="Download">
 </a></li>
+<li class="card">
+<h3 >Love Hostel</h3>
+<img class="img" src="download12.jpg" alt="">
+<br>
+<a href="https://cdn.boabd.com/embed?photo=Pbap0uS0u32zLlCjVwNLFQIOi" download="">
+<input class="btn" type="button" value="Download">
+</a></li>
 
 </ul>
 </section>
