--- a/index.html
+++ b/index.html
@@ -334,6 +334,13 @@ h1 h3{
 <a href="https://cdn.boabd.com/embed?photo=Pbap0uS0u32zLlCjVwNLFQIOi" download="">
 <input class="btn" type="button" value="Download">
 </a></li>
+<li class="card">
+<h3 >Gangubai Kathiawadi</h3>
+<img class="img" src="download13.jpg" alt="">
+<br>
+<a href="https://cdn.boabd.com/embed?photo=gdgbN5UhcfPIXBUQgwQEL2oX9" download="">
+<input class="btn" type="button" value="Download">
+</a></li>
 
 </ul>
 </section>
