--- a/index.html
+++ b/index.html
@@ -341,6 +341,13 @@ h1 h3{
 <a href="https://cdn.boabd.com/embed?photo=gdgbN5UhcfPIXBUQgwQEL2oX9" download="">
 <input class="btn" type="button" value="Download">
 </a></li>
+<li class="card">
+<h3 >Bangarraju</h3>
+<img class="img" src="download14.jpg" alt="">
+<br>
+<a href="https://cdn.boabd.com/embed?photo=gUjADo9MlqjJxMc8Ag2ylALEL" download="">
+<input class="btn" type="button" value="Download">
+</a></li>
 
 </ul>
 </section>
