--- a/index.html
+++ b/index.html
@@ -362,6 +362,13 @@ h1 h3{
 <a href="https://cdn.boabd.com/embed?photo=v0QFt5XDNgbLzapMmDARX4Zwz" download="">
 <input class="btn" type="button" value="Download">
 </a></li>
+<li class="card">
+<h3 >83</h3>
+<img class="img" src="download17.jpg" alt="">
+<br>
+<a href="https://cdn.boabd.com/embed?photo=5XUINhFdSk4Rrbu3yYPfAghQ3" download="">
+<input class="btn" type="button" value="Download">
+</a></li>
 
 </ul>
 </section>
