--- a/index.html
+++ b/index.html
@@ -369,6 +369,20 @@ h1 h3{
 <a href="https://cdn.boabd.com/embed?photo=5XUINhFdSk4Rrbu3yYPfAghQ3" download="">
 <input class="btn" type="button" value="Download">
 </a></li>
+<li class="card">
+<h3 >KGF Chapter 1</h3>
+<img class="img" src="download18.jpg" alt="">
+<br>
+<a href="https://cdn.boabd.com/embed?photo=AEkDcB8fb0DYE1HRIdkB3PBrK" download="">
+<input class="btn" type="button" value="Download">
+</a></li>
+<li class="card">
+<h3 >KGF Chapter 2</h3>
+<img class="img" src="download19.jpg" alt="">
+<br>
+<a href="https://cdn.boabd.com/embed?photo=xyf4PSu5fUhND7dGmV5aIxjB6" download="">
+<input class="btn" type="button" value="Download">
+</a></li>
 
 </ul>
 </section>
